first version of weather API implementation
